@startuml

abstract class Service{
-serviceCost:unsigned int
-serviceDuration:unsigned int
-serviceName:string
-serviceId:unsigned int
-requiredDoctorSize: unsigned int
-requiredDoctorSpec:specialisation
-isAvailable:bool
-isArchive:bool
+<<virtual>>getInfo():string
+{abstract}~Service();
}

Service <|-- Consultation
Service <|-- Rehabillitation

enum Specialisation

Service ..> Specialisation : używa >

!ifndef UKRYJ_NOTATKI

note right of Service
Abstrakcyjna klasa reprezentująca usługę.
serviceCost - koszt usługi, wliczającą koszt pielęgniarek i
podstawową stawkę doktora
serviceDuration - czas w minutach trwania usługi
serviceName - nazwa usługi
serviceId - unikalny numer usługi
requiredDoctorSize - wymagana liczba lekarzy
requiredDoctorSpec - wymagane specjalności lekarza
isAvailable - czy jest dostępna dana usługa -
potrzebne do przeprowadzenia usługi
isArchive - czy jest archiwalna
Abstrakcyjny destruktor zapewnia abstrakcyjność klasy.
end note

!endif
@enduml